# rust-wasm-mandelbrot

./: .gitignore  README.md
client/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx
client/src/pkg/: mandelbrot_wasm.d.ts  mandelbrot_wasm.js  mandelbrot_wasm_bg.wasm  mandelbrot_wasm_bg.wasm.d.ts
mandelbrot_wasm/: Cargo.toml  Makefile
mandelbrot_wasm/src/: lib.rs  lib_cpu.rs
